discussion: Stop jumping behaviour when New Post Form appears

--- a/static/scss/lesson-content/discussion.scss
+++ b/static/scss/lesson-content/discussion.scss
@@ -264,6 +264,7 @@ body > .tooltip {
       background: $mckinsey-academy-bright-gray;
       min-width: 560px;
       position: relative;
+      margin-top: 0;
       padding-top: 5em;
 
       .form-row {
